--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,8 @@
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.render-pipelines.universal": "12.1.12",
+    "com.unity.services.authentication": "3.4.1",
+    "com.unity.services.cloudsave": "2.2.1",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
